# google-re2

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.rst  _re2.cc  pyproject.toml  requirements-cibw.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: fix_pkg_name.sh
.github/workflows/: ci.yml  coverage.yml  smoke.yml  wheels.yml
