[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=6.2",
    "pybind11>=2.6.0",
    "ninja; sys_platform != 'Windows'",
    "cmake>=3.18",
]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "python-simplified-semver"
