[metadata]
name = google-re2
author = The RE2 Authors
author_email = re2-dev@googlegroups.com
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = RE2 Python bindings
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/freepn/google-re2
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: C++
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6

install_requires =
    six

py_modules =
    re2

[options.extras_require]
test =
    pytest
    absl-py
